infra-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Global
        Parameters:
          - Client
      - Label:
          default: VPC
        Parameters:
          - VpcCidr
          - VpcPublicSubnetZone
          - VpcPublicSubnetCidr
      - Label:
          default: EC2
        Parameters:
          - Ec2KeyPairName
          - Ec2AmiId
          - Ec2IamInstanceProfile
          - Ec2JupyterPassword
    ParameterLabels:
      Client:
        default: Cliente
      VpcCidr:
        default: VPC CIDR
      VpcPublicSubnetCidr:
        default: Subnet Publico CIDR
      VpcPublicSubnetZone:
        default: Zona da Subnet Publica
      Ec2KeyPairName:
        default: Chave de Acesso
      Ec2AmiId:
        default: AMI
      Ec2IamInstanceProfile:
        default: IAM Instance Profile Id
      Ec2JupyterPassword:
        default: Senha Jupyter

Parameters:
  Client:
    Type: String
    Description: O nome do cliente
    Default: sptech

  VpcCidr:
    Type: String
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Description: O bloco CIDR da VPC (ex. 10.10.0.0/24)
    Default: 10.100.0.0/24

  VpcPublicSubnetCidr:
    Type: String
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Description: O bloco CIDR da Subnet Publica (ex. 10.10.0.0/24)
    Default: 10.100.0.0/24

  VpcPublicSubnetZone:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: A zona de disponibilidade para criar a Subnet Publica
    Default: us-east-1a

  Ec2KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Chave de acesso a instancia
    Default: urubu100-key

  Ec2AmiId:
    Type: String
    Description: Id da AMI
    Default: ami-0f9fc25dd2506cf6d

  Ec2IamInstanceProfile:
    Type: String
    Description: O nome do Instance Profile
    Default: EMR_EC2_DefaultRole

  Ec2JupyterPassword:
    Type: String
    NoEcho: true
    Description: A senha de acesso ao jupyter
    Default: urubu100

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Client}

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Client}

  InternetGatewayAttachment:
    DependsOn: [InternetGateway, Vpc]
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc

  PublicRouteTable:
    DependsOn: Vpc
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Client}-public

  PublicRouteTableRouteInternet:
    DependsOn: [PublicRouteTable, InternetGateway]
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref VpcPublicSubnetZone
      CidrBlock: !Ref VpcPublicSubnetCidr
      MapPublicIpOnLaunch: true
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Client}-public

  RouteTableAssociationPublicSubnet:
    DependsOn: [PublicRouteTable, PublicSubnet]
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  InstanceSecurityGroup:
    DependsOn: Vpc
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow only https ingress
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Client}

  S3BucketRaw:
    Type: "AWS::S3::Bucket"
    Properties:
      BucketName: raw-iot-final-data-edu-2
      PublicAccessBlockConfiguration:
        BlockPublicAcls: false
        BlockPublicPolicy: false
        IgnorePublicAcls: false
        RestrictPublicBuckets: false

  MyBucketPolicyRaw:
    Type: "AWS::S3::BucketPolicy"
    Properties:
      Bucket:
        Ref: "S3BucketRaw"
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: "*"
            Action:
              - "s3:GetObject"
              - "s3:PutObject"
            Resource:
              Fn::Join:
                - ""
                - - "arn:aws:s3:::"
                  - Ref: "S3BucketRaw"
                  - "/*"

  S3BucketTrusted:
    Type: "AWS::S3::Bucket"
    Properties:
      BucketName: trusted-iot-final-data-edu-2
      PublicAccessBlockConfiguration:
        BlockPublicAcls: false
        BlockPublicPolicy: false
        IgnorePublicAcls: false
        RestrictPublicBuckets: false

  MyBucketPolicyTrusted:
    Type: "AWS::S3::BucketPolicy"
    Properties:
      Bucket:
        Ref: "S3BucketTrusted"
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: "*"
            Action:
              - "s3:GetObject"
              - "s3:PutObject"
            Resource:
              Fn::Join:
                - ""
                - - "arn:aws:s3:::"
                  - Ref: "S3BucketTrusted"
                  - "/*"

  S3BucketClient:
    Type: "AWS::S3::Bucket"
    Properties:
      BucketName: client-iot-final-data-edu-2
      PublicAccessBlockConfiguration:
        BlockPublicAcls: false
        BlockPublicPolicy: false
        IgnorePublicAcls: false
        RestrictPublicBuckets: false

  MyBucketPolicyClient:
    Type: "AWS::S3::BucketPolicy"
    Properties:
      Bucket:
        Ref: "S3BucketClient"
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: "*"
            Action:
              - "s3:GetObject"
              - "s3:PutObject"
            Resource:
              Fn::Join:
                - ""
                - - "arn:aws:s3:::"
                  - Ref: "S3BucketClient"
                  - "/*"

  LambdaInputData:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: LambdaInputData
      Runtime: python3.9
      Handler: index.lambda_handler
      Role: !Sub arn:aws:iam::${AWS::AccountId}:role/LabRole
      Timeout: 60
      MemorySize: 128
      Code:
        S3Bucket: !Ref S3BucketRaw
        S3Key: index.zip

  SensorDataTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: SensorIotRawData
      AttributeDefinitions:
        - AttributeName: fk_sensor
          AttributeType: N
        - AttributeName: data_hora
          AttributeType: S
        - AttributeName: timestamp
          AttributeType: N
        - AttributeName: fk_upa
          AttributeType: N
      KeySchema:
        - AttributeName: fk_sensor
          KeyType: HASH
        - AttributeName: data_hora
          KeyType: RANGE
      BillingMode: PAY_PER_REQUEST
      GlobalSecondaryIndexes:
        - IndexName: UpaIndex
          KeySchema:
            - AttributeName: fk_upa
              KeyType: HASH
            - AttributeName: data_hora
              KeyType: RANGE
          Projection:
            ProjectionType: ALL
        - IndexName: UpaIndex2
          KeySchema:
            - AttributeName: fk_upa
              KeyType: HASH
            - AttributeName: timestamp
              KeyType: RANGE
          Projection:
            ProjectionType: ALL
      TimeToLiveSpecification:
        AttributeName: ttl
        Enabled: true
      Tags:
        - Key: Project
          Value: Healthcare

  RestApi:
    Type: AWS::ApiGateway::RestApi
    Properties:
      Name: "ApiGatewayIoT"
      Parameters:
        endpointConfigurationTypes: REGIONAL
      BinaryMediaTypes:
        - "application/json"

  IoTDataResource:
    Type: AWS::ApiGateway::Resource
    Properties:
      RestApiId: !Ref RestApi
      ParentId: !GetAtt RestApi.RootResourceId
      PathPart: "iot"

  PostMethod:
    Type: AWS::ApiGateway::Method
    Properties:
      AuthorizationType: NONE
      HttpMethod: POST
      RestApiId: !Ref RestApi
      ResourceId: !Ref IoTDataResource
      Integration:
        Type: AWS
        IntegrationHttpMethod: POST
        Uri: !Sub
          - arn:aws:apigateway:${Region}:lambda:path/2015-03-31/functions/${LambdaArn}/invocations
          - Region: !Ref "AWS::Region"
            LambdaArn: !GetAtt LambdaInputData.Arn
        PassthroughBehavior: WHEN_NO_MATCH
        Credentials: !Sub arn:aws:iam::${AWS::AccountId}:role/LabRole
        IntegrationResponses:
          - StatusCode: 200
            ResponseTemplates:
              application/json: ""
      MethodResponses:
        - StatusCode: 200

  RestApiDeploy:
    Type: AWS::ApiGateway::Deployment
    DependsOn: PostMethod
    Properties:
      RestApiId: !Ref RestApi
      StageName: prod

  LambdaProcessorDynamo:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: LambdaProcessorDynamo
      Runtime: python3.9
      Handler: scheduler.lambda_handler
      Role: !Sub arn:aws:iam::${AWS::AccountId}:role/LabRole
      Timeout: 60
      MemorySize: 128
      Code:
        S3Bucket: !Ref S3BucketRaw
        S3Key: scheduler.zip

  EventBridgeScheduler:
    Type: AWS::Scheduler::Schedule
    Properties:
      FlexibleTimeWindow:
        MaximumWindowInMinutes: 1
        Mode: "FLEXIBLE"
      Name: "SchedulerProcessIotData"
      ScheduleExpression: "rate(5 minutes)"
      ScheduleExpressionTimezone: America/Sao_Paulo
      State: ENABLED
      Target:
        Arn: !GetAtt LambdaProcessorDynamo.Arn
        RoleArn: !Sub arn:aws:iam::${AWS::AccountId}:role/LabRole

  Instance:
    DependsOn: [RouteTableAssociationPublicSubnet, InstanceSecurityGroup]
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref Ec2KeyPairName
      ImageId: !Ref Ec2AmiId
      InstanceType: t3.small
      SubnetId: !Ref PublicSubnet
      IamInstanceProfile: !Ref Ec2IamInstanceProfile
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          amazon-linux-extras install java-openjdk11 -y
          curl -O https://dlcdn.apache.org/spark/spark-3.2.1/spark-3.2.1-bin-hadoop3.2.tgz
          tar xzf spark-3.2.1-bin-hadoop3.2.tgz -C /usr/local --owner root --group root --no-same-owner
          rm -rf spark-3.2.1-bin-hadoop3.2.tgz
          mv /usr/local/spark-3.2.1-bin-hadoop3.2 /usr/local/spark
          pip3 install pyspark --no-cache-dir
          pip3 install jupyterlab --no-cache-dir
          touch /lib/systemd/system/jupyter.service
          echo "[Unit]" >> /lib/systemd/system/jupyter.service
          echo "Description=Jupyter Notebook" >> /lib/systemd/system/jupyter.service
          echo "[Service]" >> /lib/systemd/system/jupyter.service
          echo "Type=simple" >> /lib/systemd/system/jupyter.service
          echo "ExecStart=/opt/jupyter/script/start.sh" >> /lib/systemd/system/jupyter.service
          echo "Restart=always" >> /lib/systemd/system/jupyter.service
          echo "RestartSec=10" >> /lib/systemd/system/jupyter.service
          echo "[Install]" >> /lib/systemd/system/jupyter.service
          echo "WantedBy=multi-user.target" >> /lib/systemd/system/jupyter.service
          mkdir /opt/jupyter
          mkdir /opt/jupyter/notebook
          mkdir /opt/jupyter/script
          touch /opt/jupyter/script/start.sh
          echo '#!/bin/bash' >> /opt/jupyter/script/start.sh
          echo '/usr/bin/python3 -m notebook --NotebookApp.notebook_dir=/opt/jupyter/notebook --NotebookApp.password=$(/usr/bin/python3 -c "from notebook.auth import passwd; print(passwd(\"urubu100\"))")  --allow-root --ip 0.0.0.0 --port 80' >> /opt/jupyter/script/start.sh
          chmod +x /opt/jupyter/script/start.sh
          systemctl daemon-reload
          systemctl start jupyter
          systemctl enable jupyter
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Client}
